# snc

./: .gitignore  NOTES.md  README.md  pyproject.toml
data/: 1000pieris.tab  10hits.dd  10hits.tab  3a.dd  3b.dd  3c.dd  Durand_GoldStandard.txt  README.md
snc/: __init__.py  components.py  generate_snc_data.py  main.py  randomdata.py
src/snc/: __init__.py  components.py  generate_snc_data.py  main.py  randomdata2.py  rbh.py
tests/: test_confidence_interval.py
