[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "snc"
authors = [{name = "Lars Arvestad", email = "arve@math.su.se"}]
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
requires-python = ">=3.6"

[dependencies]
scipy = "^1.8.0"
numpy = "^1.20.3"

[project.scripts]
snc = "snc:nc_main"
rbh = "snc.rbh:rbh_main"
